--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <body>
     <!-- Header -->
     <header class="bg-primary text-white py-3">
-      <h1>Kutak dobre hrane</h1>
+      <h1>Garden Scaping</h1>
     </header>
 
     <!-- Main Content -->
