--- a/frontend/src/app/components/homepage/homepage.component.html
+++ b/frontend/src/app/components/homepage/homepage.component.html
@@ -67,11 +67,13 @@
                             [tableStyle]="{ 'min-width': '50rem' }"
                             currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
                             (onPage)="pageChange($event)"
+                            (onSort)="sortChange($event)"
+
                           >
                             <ng-template pTemplate="header">
                               <tr>
-                                  <th pSortableColumn="Name" style="width:20%">Code <p-sortIcon field="name"></p-sortIcon></th>
-                                  <th pSortableColumn="Address" style="width:20%">Name <p-sortIcon field="address"></p-sortIcon></th>
+                                  <th pSortableColumn="name" style="width:20%">Name <p-sortIcon field="name"></p-sortIcon></th>
+                                  <th pSortableColumn="address" style="width:20%">Address <p-sortIcon field="address"></p-sortIcon></th>
                               </tr>
                             </ng-template>
                             <ng-template pTemplate="body" let-firm>
