--- a/frontend/src/app/components/firm/firm.component.html
+++ b/frontend/src/app/components/firm/firm.component.html
@@ -1,16 +1,16 @@
 <main class="content">
-        <div class="row">
+        <div class="row" style="width: 100%">
             <div class="col-md-6">
                 <div class="row">
                     <div id="map" style="height: 400px; width: 100%"></div>
                 </div>
                 <div class="row">
                     <p>{{ firm.name }}</p>
-                    <p>
+                    <p> Address:
                         {{ firm.address.street }}
                         {{ firm.address.number }}
                     </p>
-                    <p>{{ firm.vacation.start }} - {{ firm.vacation.end }}</p>
+                    <p> Vacation period: {{ firm.vacation.start }} - {{ firm.vacation.end }}</p>
                 </div>
             </div>
             <div class="col-md-6">
